--- a/{{role_name}}/.github/workflows/validation.yml.jinja
+++ b/{{role_name}}/.github/workflows/validation.yml.jinja
@@ -85,7 +85,7 @@ jobs:
       - name: Check out the codebase.
         uses: actions/checkout@v4
         with:
-          path: 'ansible_role_ensure_helm_state'
+          path: '{{ role_name }}'
 
       - name: Set up Python 3.
         uses: actions/setup-python@v5
@@ -93,13 +93,13 @@ jobs:
           python-version: '3.x'
 
       - name: Install test dependencies.
-        run: pip3 install -r ansible_role_ensure_helm_state/pip_requirements.txt
+        run: pip3 install -r {{ role_name }}/pip_requirements.txt
 
       - name: Run Molecule tests.
         run: molecule test
-        working-directory: 'ansible_role_ensure_helm_state'
+        working-directory: '{{ role_name }}'
         env:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
-          MOLECULE_DISTRO: ${{ matrix.distro }}
+          MOLECULE_DISTRO: {{ '${{ matrix.distro }}' }}
 {% endif %}
